--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -9,11 +9,14 @@
 @endsection
 
 @section('content')
+<div class="container">
+
   <h1 class="text-center mt-5 display-2">Welcome To</h1>
   <a href="/">
     <img src="./logo.png" class="container img-fluid">
   </a>
-  </div>
+</div>
+</div>
 </div>
 
 @endsection
