--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|Satisfy&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|Satisfy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amiri&display=swap" rel="stylesheet">
 
 
   {{ style('style') }}
@@ -18,82 +26,87 @@
   </title>
 
 </head>
+
 <body>
   <div class="navegation">
-    
-    
-    
+
+
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg" alt="" width="30" height="30">
+        <img src="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg" alt="" width="30"
+          height="30">
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav mr-auto">
-          
+
           <li class="nav-item dropdown btn btn-outline-success mr-2 ml-2">
-            <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Ropa sobre Medida</a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-decoration-none" href="#">Ropa para Mujer</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item text-decoration-none" href="#">Ropa para Hombre</a>
-              </div>
-            </li>
-            
-            <li class="nav-item dropdown btn btn-outline-info mr-2 ml-2">
-              <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clientes</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item text-decoration-none" href="/clientes/registrer">Registrar Cliente</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item text-decoration-none" href="/clientes/search   ">Buscar Cliente</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item text-decoration-none" href="/clientes/all   ">Ver Todos los Clientes</a>
-                </div>
-              </li>
-              
-              <li class="nav-item dropdown btn btn-outline-secondary mr-2 ml-2">
-                <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Prendas</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item text-decoration-none" href="/prendas/registrer">Registrar Prenda</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-decoration-none" href="/prendas/search">Buscar Prenda</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-decoration-none" href="/prendas/all   ">Ver Todas las Prendas</a>
-                  </div>
-                </li>
-                
-                <li class="nav-item dropdown btn btn-outline-primary mr-2 ml-2">
-                  <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Alquiler</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item text-decoration-none" href="/alquileres/registrer">Registrar Alquiler</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver Alquileres</a>
-                    </div>
-                  </li>
-                  
-                  <li class="nav-item  btn btn-outline-warning mr-2 ml-2">
-                    <a class="nav-link text-decoration-none" 
-                    href="/contact" role="button"
-                    aria-haspopup="true" aria-expanded="false">
-                    Contact
-                  </a>
-                </li>
-              </ul>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-decoration-none" href="#">Ropa para Mujer</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-decoration-none" href="#">Ropa para Hombre</a>
             </div>
-            </nav>
-          </div>
-          
-          <div class="container">
-            @!section('content')
-          </div>
-        </body>
-        @!section('js-extra')
-        </html>
-        
+          </li>
+
+          <li class="nav-item dropdown btn btn-outline-info mr-2 ml-2">
+            <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Clientes</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-decoration-none" href="/clientes/registrer">Registrar Cliente</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-decoration-none" href="/clientes/search   ">Buscar Cliente</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-decoration-none" href="/clientes/all   ">Ver Todos los Clientes</a>
+            </div>
+          </li>
+
+          <li class="nav-item dropdown btn btn-outline-secondary mr-2 ml-2">
+            <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Prendas</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-decoration-none" href="/prendas/registrer">Registrar Prenda</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-decoration-none" href="/prendas/search">Buscar Prenda</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-decoration-none" href="/prendas/all   ">Ver Todas las Prendas</a>
+            </div>
+          </li>
+
+          <li class="nav-item dropdown btn btn-outline-primary mr-2 ml-2">
+            <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Alquiler</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item text-decoration-none" href="/alquileres/registrer">Registrar Alquiler</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver Alquileres</a>
+            </div>
+          </li>
+
+          <li class="nav-item  btn btn-outline-warning mr-2 ml-2">
+            <a class="nav-link text-decoration-none" href="/contact" role="button" aria-haspopup="true"
+              aria-expanded="false">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  @!section('content')
+
+</body>
+@!section('js-extra')
+
+</html>
