--- a/resources/views/clientes/all.edge
+++ b/resources/views/clientes/all.edge
@@ -22,9 +22,9 @@
                <p class="badge badge-pill badge-primary" > #{{cli.id}}</p>
               </div>
               <div class="col-10">
-                <a href="/clientes/edit/{{cli.id}}" class="badge badge-pill badge-success" style="text-decoration: none">Actualizar</a>
-                <a href="/clientes/delete/{{cli.id}}" class="badge badge-pill badge-warning" style="text-decoration: none">[L]Borrar</a>
-                <a href="/clientes/destroy/{{cli.id}}" class="badge badge-pill badge-danger" style="text-decoration: none">[S]Borrar</a>   
+                <a href="/api/v1/clientes/edit/{{cli.id}}" class="badge badge-pill badge-success" style="text-decoration: none">Actualizar</a>
+                <a href="/api/v1/clientes/delete/{{cli.id}}" class="badge badge-pill badge-warning" style="text-decoration: none">[L]Borrar</a>
+                <a href="/api/v1/clientes/destroy/{{cli.id}}" class="badge badge-pill badge-danger" style="text-decoration: none">[S]Borrar</a>   
               </div>
             </div>
 
