--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -12,8 +12,8 @@
 <div class="container">
 
   <h1 class="text-center mt-5 display-2">Welcome To</h1>
-  <a href="/">
-    <img src="./logo.png" class="container img-fluid">
+  <a href="/api/v1">
+    <img src="../logo.png" class="container img-fluid" alt="logo">
   </a>
 </div>
 </div>
