--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -61,11 +61,11 @@
               aria-haspopup="true" aria-expanded="false">
               Clientes</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-decoration-none" href="/clientes/registrer">Registrar Cliente</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/clientes/registrer">Registrar Cliente</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item text-decoration-none" href="/clientes/search   ">Buscar Cliente</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/clientes/search   ">Buscar Cliente</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item text-decoration-none" href="/clientes/all   ">Ver Todos los Clientes</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/clientes/all   ">Ver Todos los Clientes</a>
             </div>
           </li>
 
@@ -74,11 +74,11 @@
               aria-haspopup="true" aria-expanded="false">
               Prendas</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-decoration-none" href="/prendas/registrer">Registrar Prenda</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/prendas/registrer">Registrar Prenda</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item text-decoration-none" href="/prendas/search">Buscar Prenda</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/prendas/search">Buscar Prenda</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item text-decoration-none" href="/prendas/all   ">Ver Todas las Prendas</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/prendas/all   ">Ver Todas las Prendas</a>
             </div>
           </li>
 
@@ -87,14 +87,14 @@
               aria-haspopup="true" aria-expanded="false">
               Alquiler</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-decoration-none" href="/alquileres/registrer">Registrar Alquiler</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/alquileres/registrer">Registrar Alquiler</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver Alquileres</a>
+              <a class="dropdown-item text-decoration-none" href="/api/v1/alquileres/all">Ver Alquileres</a>
             </div>
           </li>
 
           <li class="nav-item  btn btn-outline-warning mr-2 ml-2">
-            <a class="nav-link text-decoration-none" href="/contact" role="button" aria-haspopup="true"
+            <a class="nav-link text-decoration-none" href="/api/v1/contact" role="button" aria-haspopup="true"
               aria-expanded="false">
               Contact
             </a>
