--- a/resources/views/alquileres/all.edge
+++ b/resources/views/alquileres/all.edge
@@ -16,7 +16,7 @@
             <tr><th colspan="7" class="bg-info">
                 <div class="row">
                   <div class="col-2">
-                      <a href="/alquileres" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                      <a href="/api/v1/alquileres" class="card-title btn btn-link mt-2" style="text-decoration: none">
                         <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
                       </a>
                   </div>
@@ -43,12 +43,12 @@
                 <td class="table-light">{{ alq.return_date }}</td>
                 <td class="table-light">{{ alq.value }}</td>
                 <td class="table-light">
-                  <a href="/alquileres/info/cliente/{{alq.id}}" class="btn btn-info text-decoration-none">Ver informacion del Cliente y Prenda</a>
+                  <a href="/api/v1/alquileres/info/cliente/{{alq.id}}" class="btn btn-info text-decoration-none">Ver informacion del Cliente y Prenda</a>
                 </td>
                 <td class="table-light">
-                    <a href="/alquileres/edit/{{alq.id}}" class="btn btn-primary mr-2 mt-2 mb-2 ml-2 text-decoration-none" >Actualizar</a>
-                    <a href="/alquileres/delete/{{alq.id}}" class="btn btn-warning mr-2 mt-2 mb-2 ml-2 text-decoration-none" >[L]Borrar</a>
-                    <a href="/alquileres/destroy/{{alq.id}}" class="btn btn-danger mr-2 mt-2 mb-2 ml-2 text-decoration-none" >[S]Borrar</a>
+                    <a href="/api/v1/alquileres/edit/{{alq.id}}" class="btn btn-primary mr-2 mt-2 mb-2 ml-2 text-decoration-none" >Actualizar</a>
+                    <a href="/api/v1/alquileres/delete/{{alq.id}}" class="btn btn-warning mr-2 mt-2 mb-2 ml-2 text-decoration-none" >[L]Borrar</a>
+                    <a href="/api/v1/alquileres/destroy/{{alq.id}}" class="btn btn-danger mr-2 mt-2 mb-2 ml-2 text-decoration-none" >[S]Borrar</a>
                 </td>
                 </tr>                
             @endif
