--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -13,7 +13,7 @@
     <div class="card text-white bg-dark">
       <div class="row">
         <div class="col-2">
-            <a href="/alquileres" class="card-title btn btn-link mt-2" style="text-decoration: none">
+            <a href="/api/v1/alquileres" class="card-title btn btn-link mt-2" style="text-decoration: none">
               <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
             </a>
         </div>
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="card-body">
-      <form action="/alquileres/registro" method="POST">
+      <form action="/api/v1/alquileres/registro" method="POST">
             {{ csrfField() }}
               <div class="form-group">
                 
