--- a/resources/views/alquileres/info/info.edge
+++ b/resources/views/alquileres/info/info.edge
@@ -14,7 +14,7 @@
         <div class="card text-white bg-info">
             <div class="row card-header ">
                 <div class="col-2">
-                    <a href="/alquileres/all" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                    <a href="/api/v1/alquileres/all" class="card-title btn btn-link mt-2" style="text-decoration: none">
                         <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
                     </a>
                 </div>
@@ -29,6 +29,8 @@
                             @if(cli.id == id.clients_id)
                                 <h4 id="title-info">Informacion del Cliente:</h4>
                                 <p class="card-text">
+                                    {{cli.id}}
+                                    {{id.clients_id}}
                                     Nombre: {{cli.names}} {{cli.lastnames}} <br>
                                     Telefono: {{cli.cellphone}} <br>
                                     E-mail: {{cli.address}} <br>                       
@@ -51,7 +53,7 @@
                         @endeach
                     </div>
                 </div>
-                <a class="btn btn-dark btn-block" href="/alquileres/all" style="text-decoration: none">Volver</a>
+                <a class="btn btn-dark btn-block" href="/api/v1/alquileres/all" style="text-decoration: none">Volver</a>
             </div>
         </div>
     </div>
