--- a/resources/views/clientes/delete.edge
+++ b/resources/views/clientes/delete.edge
@@ -14,7 +14,7 @@
     <div class="card text-white bg-dark">
         <div class="row">
             <div class="col-2">
-                <a href="/clientes/all" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                <a href="/api/v1/clientes/all" class="card-title btn btn-link mt-2" style="text-decoration: none">
                   <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
                 </a>
             </div>
@@ -24,7 +24,7 @@
           </div>
       <div class="card-body">
 
-      <form action="{{ ' /clientes/del/'+clientes_id.id+'?_method=PUT' }}" method="POST">
+      <form action="{{ ' /api/v1/clientes/del/'+clientes_id.id+'?_method=PUT' }}" method="POST">
             {{ csrfField() }}
             <div class="form-group">
             <h2>Esta Seguro que desea borrar el cliente : {{clientes_id.names}} ?</h2>
