--- a/resources/views/clientes/find.edge
+++ b/resources/views/clientes/find.edge
@@ -26,7 +26,7 @@
     <div class="card-body">
       
       <div class="form-group">
-        <form action="/clientes/buscado" method="POST">
+        <form action="/api/v1/clientes/buscado" method="POST">
           {{ csrfField() }}
           <input type="number" class="form-control" placeholder="Ingrese el Numero de Telefono" name ="cellphone" value = "{{data.cellphone}}" id="field-number" onkeyup="FieldNumber()" required >
             {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('cellphone'), hasErrorFor('cellphone'))  }}
